--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chakit-Arora</title>
+  <title>Dilraj kaur</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -111,7 +111,7 @@
 <div class="container-fluid">
   <h1></h1>
   <div id="image" style="padding-top:100px; text-align:center";>
-    <img src=" chakitarora.github.io/Chakit.jpg">
+    <img src=" dilraj-kaur.github.io/dilraj.jpg">
   </div>
   <p style="padding-top:50px; text-align:center; font-size:2.2vmin;"> Hi! I am </p>
   <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Chakit Arora </p>
