--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <img src=" dilraj-kaur.github.io/dilraj1.jpg">
   </div>
   <p style="padding-top:50px; text-align:center; font-size:2.2vmin;"> Hi! I am </p>
-  <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Chakit Arora </p>
+  <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Dilraj kaur </p>
   <p style="text-align:center; font-size:2.2vmin;"> a Phd Comp Bio scholar in Prof. GPS Raghava's Lab @ IIIT-Delhi </p>
  <div style="vertical-align:middle; text-align:center;">
    <a href="https://www.facebook.com/chakit.arora" target="_blank" class="fa fa-facebook" title="Facebook"></a>
