--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
   <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Dilraj kaur </p>
   <p style="text-align:center; font-size:2.2vmin;"> a Phd Comp Bio scholar in Prof. GPS Raghava's Lab @ IIIT-Delhi </p>
  <div style="vertical-align:middle; text-align:center;">
-   <a href="https://www.facebook.com/chakit.arora" target="_blank" class="fa fa-facebook" title="Facebook"></a>
-   <a href="https://github.com/chakitarora" target="_blank" class="fa fa-github" title="Github"></a>
-  <a href="mailto:chakita@iiitd.ac.in" target="_blank" class="fa fa-envelope" title="Email ID"></a>
-  <a href="https://www.linkedin.com/in/chakitarora/"target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-  <a href="https://www.researchgate.net/profile/Chakit_Arora" target="_blank" class="fa fa-registered" title="Research Gate"></a> 
-  <a href="https://scholar.google.com/citations?user=IUeqxQsAAAAJ&hl=en&oi=ao" target="_blank" class="fa fa-google" title="Google Scholar"></a>
+   <a href="https://www.facebook.com/babundfrnz/" target="_blank" class="fa fa-facebook" title="Facebook"></a>
+   <a href="https://github.com/Dilraj-kaur" target="_blank" class="fa fa-github" title="Github"></a>
+  <a href="mailto:dilrajk@iiitd.ac.in" target="_blank" class="fa fa-envelope" title="Email ID"></a>
+  <a href="https://www.linkedin.com/in/dilraj-kaur-378b9560/"target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
+  <a href="https://www.researchgate.net/profile/Dilraj-Kaur-2" target="_blank" class="fa fa-registered" title="Research Gate"></a> 
+  <a href="https://scholar.google.com/citations?hl=en&user=y4YPsBEAAAAJ" target="_blank" class="fa fa-google" title="Google Scholar"></a>
  </div>
   <!--div style="vertical-align:middle; text-align:center;">
    <a href="chakitarora.github.io/Chakit.resume.2020.pdf" target="_blank" class="fa fa-file-pdf-o" title="Resume"></a> 
