--- a/index.html
+++ b/index.html
@@ -1,165 +1,133 @@
-<!DOCTYPE HTML>
-<!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Big Picture by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+  <title>Chakit-Arora</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+   .fa {
+  padding: 15px;
+  font-size: 20px;
+  width: 50px;
+  height:50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%; 
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
 
-		<!-- Header -->
-			<header id="header">
-				<h1>Big Picture</h1>
-				<nav>
-					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+.fa:hover {
+    opacity: 0.7;
+}
+    
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
 
-		<!-- Intro -->
-			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content">
-					<header>
-						<h2>Hey.</h2>
-					</header>
-					<p>Welcome to <strong>Dilraj kaur</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
-					<footer>
-						<a href="#one" class="button style2 down">More</a>
-					</footer>
-				</div>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>What I Do</h2>
-					</header>
-					<p>I am seeking a Ph.D. and received my MTech. in Computational Biology from IIITD. Amity University awarded me a B.Tech in Biotechnology. My career ambition is to prosper in an atmosphere that fosters progress and excellence, as well as self-development and the achievement of personal and corporate objectives.</p>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Who I Am</h2>
-					</header>
-					<p>A small-town girl from Deoria, Uttar Pradesh, who was born on July 20th, now resides in Delhi, India. A travel enthusiast who loves meeting new people, learning new experiences, and finding fun in little things :)</p>
-				</div>
+.fa-github {
+  background: black;
+  color: white;
+}
 
 
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
+.fa-envelope {
+  background: #dd4b39;
+  color: white;
+}
+.fa-registered {
+  background:#00b489;
+  color: white;
+}
 
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>My Work</h2>
-						<p>I'm mostly involved in the area of 'Immuno-informatics.' In layman's words, I work to explain bioinformatics' fundamental "mechanics" or, more realistically, a specific feature of bioinformatics (genomics, protein structure predictions, phylogenetic models, etc.).Here is a compilation of my research that has been published.</p>
-					</header>
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
 
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/01.jpg" <p><b>PRRDB2.0 is a comprehensive database of pattern recognition receptors and their ligands. This was my first publication of the PhD life, in 2019 <link rel="stylesheet" type="text/css" href="https://academic.oup.com/database/article/doi/10.1093/database/baz076/5523871"></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
-						</div>
+.fa-file-pdf-o {
+  background:  #dd4b39;
+  color: white;
+}
 
-				</div>
-			</section>
+.fa-google {
+  background:#4285F4;
+  color: white;
+}
 
-			<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>My hobbies</h2>
-					</header>
-					<p>Painting, stone art, craft, and a few DIYs are a few of my interests. I really love dining, dancing, and gardening.</p>
-				</div>
-				</section>
+  body {
+      position: relative; 
+  }
+ 
+  #image img {
+    vertical-align: middle;
+    text-align:center;
+  width: 28vmin;
+  height: 28vmin;
+  border-radius: : 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  vertical-align: middle;
+  transition-duration: .5s;
+  transition-timing-function: linear;
 
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="content">
-					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</div>
-				</div>
-			</section>
+}
+   p{
+      font-style: oblique;
+    }
+  </style>
+</head>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-		<!-- Footer -->
-			<footer id="footer">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+    <div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <!--li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="accomplishments.html">Publications and Teaching</a></li-->
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>    
 
-				<!-- Icons -->
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-					</ul>
+<div class="container-fluid">
+  <h1></h1>
+  <div id="image" style="padding-top:100px; text-align:center";>
+    <img src=" chakitarora.github.io/Chakit.jpg">
+  </div>
+  <p style="padding-top:50px; text-align:center; font-size:2.2vmin;"> Hi! I am </p>
+  <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Chakit Arora </p>
+  <p style="text-align:center; font-size:2.2vmin;"> a Phd Comp Bio scholar in Prof. GPS Raghava's Lab @ IIIT-Delhi </p>
+ <div style="vertical-align:middle; text-align:center;">
+   <a href="https://www.facebook.com/chakit.arora" target="_blank" class="fa fa-facebook" title="Facebook"></a>
+   <a href="https://github.com/chakitarora" target="_blank" class="fa fa-github" title="Github"></a>
+  <a href="mailto:chakita@iiitd.ac.in" target="_blank" class="fa fa-envelope" title="Email ID"></a>
+  <a href="https://www.linkedin.com/in/chakitarora/"target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
+  <a href="https://www.researchgate.net/profile/Chakit_Arora" target="_blank" class="fa fa-registered" title="Research Gate"></a> 
+  <a href="https://scholar.google.com/citations?user=IUeqxQsAAAAJ&hl=en&oi=ao" target="_blank" class="fa fa-google" title="Google Scholar"></a>
+ </div>
+  <!--div style="vertical-align:middle; text-align:center;">
+   <a href="chakitarora.github.io/Chakit.resume.2020.pdf" target="_blank" class="fa fa-file-pdf-o" title="Resume"></a> 
+  </div-->
+  </div>    
 
-				<!-- Menu -->
-					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+</body>
 </html>
