--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chakit-Arora</title>
+  <title>Dr. Dilraj kaur</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -111,18 +111,18 @@
 <div class="container-fluid">
   <h1></h1>
   <div id="image" style="padding-top:100px; text-align:center";>
-    <img src=" chakitarora.github.io/Chakit.jpg">
+    <img src=" dilraj-kaur.github.io/dilraj1.jpg">
   </div>
   <p style="padding-top:50px; text-align:center; font-size:2.2vmin;"> Hi! I am </p>
-  <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Chakit Arora </p>
-  <p style="text-align:center; font-size:2.2vmin;"> a Phd Comp Bio scholar in Prof. GPS Raghava's Lab @ IIIT-Delhi </p>
+  <p style="text-align:center; font-size:3.5vmin; font-style: normal; font-weight:bold "> Dilraj kaur</p>
+  <p style="text-align:center; font-size:2.2vmin;"> Experienced Data Scientist with a PhD in Computational Biology and over 9 years of expertise in applying machine learning (ML) and deep learning (DL) methodologies to complex biomedical datasets. Currently working as Bioinformatic scientist in The institute of cancer research ICR, london, UK. </p>
  <div style="vertical-align:middle; text-align:center;">
-   <a href="https://www.facebook.com/chakit.arora" target="_blank" class="fa fa-facebook" title="Facebook"></a>
+   <a href="https://www.facebook.com/dilrajkaur" target="_blank" class="fa fa-facebook" title="Facebook"></a>
    <a href="https://github.com/chakitarora" target="_blank" class="fa fa-github" title="Github"></a>
-  <a href="mailto:chakita@iiitd.ac.in" target="_blank" class="fa fa-envelope" title="Email ID"></a>
-  <a href="https://www.linkedin.com/in/chakitarora/"target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-  <a href="https://www.researchgate.net/profile/Chakit_Arora" target="_blank" class="fa fa-registered" title="Research Gate"></a> 
-  <a href="https://scholar.google.com/citations?user=IUeqxQsAAAAJ&hl=en&oi=ao" target="_blank" class="fa fa-google" title="Google Scholar"></a>
+  <a href="mailto:kdilraj2028@gmail.com" target="_blank" class="fa fa-envelope" title="Email ID"></a>
+  <a href="https://www.linkedin.com/in/dilraj-kaur-phd/target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
+  <a href="https://www.researchgate.net/profile/dilrajkaur" target="_blank" class="fa fa-registered" title="Research Gate"></a> 
+  <a href="https://https://scholar.google.com/citations?hl=en&user=y4YPsBEAAAAJ&view_op=list_works&sortby=pubdate" target="_blank" class="fa fa-google" title="Google Scholar"></a>
  </div>
   <!--div style="vertical-align:middle; text-align:center;">
    <a href="chakitarora.github.io/Chakit.resume.2020.pdf" target="_blank" class="fa fa-file-pdf-o" title="Resume"></a> 
