--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <p style="text-align:center; font-size:2.2vmin;"> Experienced Data Scientist with a PhD in Computational Biology and over 9 years of expertise in applying machine learning (ML) and deep learning (DL) methodologies to complex biomedical datasets. Currently working as Bioinformatic scientist in The institute of cancer research ICR, london, UK. </p>
  <div style="vertical-align:middle; text-align:center;">
    <a href="https://www.facebook.com/dilrajkaur" target="_blank" class="fa fa-facebook" title="Facebook"></a>
-   <a href="https://github.com/chakitarora" target="_blank" class="fa fa-github" title="Github"></a>
+   <a href="https://github.com/dilraj-kaur" target="_blank" class="fa fa-github" title="Github"></a>
   <a href="mailto:kdilraj2028@gmail.com" target="_blank" class="fa fa-envelope" title="Email ID"></a>
   <a href="https://www.linkedin.com/in/dilraj-kaur-phd/target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
   <a href="https://www.researchgate.net/profile/dilrajkaur" target="_blank" class="fa fa-registered" title="Research Gate"></a> 
